--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI = mongodb+srv://iaktr999:U1MJpHJ60Jn85Sr5@cluster0.v0dowvx.mongodb.net/?retryWrites=true&w=majority&appName=AtlasApp
+JWT_SECRET = akhtar
