--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
 MONGO_URI = mongodb+srv://iaktr999:U1MJpHJ60Jn85Sr5@cluster0.v0dowvx.mongodb.net/
 JWT_SECRET = akhtar
+NODE_ENV = production
